--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
             cd ~/sourceme/Source-Me
             git pull origin main
             cd ~/sourceme
-            docker compose restart backend
+            docker compose up -d --build backend
             docker compose ps
