fix: GitHub Actions 배포 워크플로우 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd ~/sourceme/Source-Me
-            git pull origin main
+            git pull --rebase origin main
             cd ~/sourceme
             docker compose up -d --build backend
             docker compose ps
