--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,4 @@
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: sourceme-app
-    restart: unless-stopped
-    environment:
-      SPRING_PROFILE: ${SPRING_PROFILE:-local}
-      DB_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB:-sourceme}
-      DB_USERNAME: ${POSTGRES_USER:-sourceme_user}
-      DB_PASSWORD: ${POSTGRES_PASSWORD:-sourceme_password}
-      UPLOAD_DIR: ${UPLOAD_DIR:-/app/uploads}
-    ports:
-      - "${APP_PORT:-8081}:8081"
-    volumes:
-      - uploads:/app/uploads
-    depends_on:
-      postgres:
-        condition: service_healthy
-    networks:
-      - sourceme-network
-
   postgres:
     image: postgres:16-alpine
     container_name: sourceme-postgres
@@ -40,6 +18,63 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - sourceme-network
+
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: sourceme-backend
+    restart: unless-stopped
+    environment:
+      SPRING_PROFILE: ${SPRING_PROFILE:-local}
+      DB_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB:-sourceme}
+      DB_USERNAME: ${POSTGRES_USER:-sourceme_user}
+      DB_PASSWORD: ${POSTGRES_PASSWORD:-sourceme_password}
+      UPLOAD_DIR: ${UPLOAD_DIR:-/app/uploads}
+    ports:
+      - "${BACKEND_PORT:-8081}:8081"
+    volumes:
+      - uploads:/app/uploads
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - sourceme-network
+
+  frontend:
+    build:
+      context: ./Source-Me-FE
+      dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-https://sourceme.duckdns.org/api/v1}
+    container_name: sourceme-frontend
+    restart: unless-stopped
+    environment:
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-https://sourceme.duckdns.org/api/v1}
+    ports:
+      - "${FRONTEND_PORT:-3000}:3000"
+    depends_on:
+      - backend
+    networks:
+      - sourceme-network
+
+  nginx:
+    image: nginx:alpine
+    container_name: sourceme-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - uploads:/app/uploads:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    depends_on:
+      - frontend
+      - backend
     networks:
       - sourceme-network
 
