fix: DDD 경로를 3-Layer 경로로 일괄 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,7 @@ spring:
     sql-migration-prefix: V
     sql-migration-separator: __
     sql-migration-suffixes: .sql
+    validate-on-migrate: false
 
 server:
   port: 8081
