feat: Prometheus와 Grafana 모니터링 시스템 추가
- Spring Boot Actuator + Micrometer Prometheus 통합
- Prometheus 메트릭 수집 서버 구성
- Grafana 대시보드 시각화 환경 구축
- PostgreSQL Exporter로 DB 성능 모니터링
- Node Exporter로 시스템 리소스 모니터링

기술적 구현:
- /actuator/prometheus 엔드포인트 노출
- Docker Compose로 모니터링 스택 통합 관리
- Grafana 데이터소스 자동 프로비저닝 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,18 @@ spring:
 server:
   port: 8081
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    tags:
+      application: ${spring.application.name}
+
 app:
   upload:
     dir: ${UPLOAD_DIR:uploads}
