--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,13 @@ services:
     container_name: sourceme-backend
     restart: unless-stopped
     environment:
-      SPRING_PROFILE: ${SPRING_PROFILE:-local}
-      DB_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB:-sourceme}
-      DB_USERNAME: ${POSTGRES_USER:-sourceme_user}
-      DB_PASSWORD: ${POSTGRES_PASSWORD:-sourceme_password}
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILE:-local}
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB:-sourceme}
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER:-sourceme_user}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:-sourceme_password}
       UPLOAD_DIR: ${UPLOAD_DIR:-/app/uploads}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRATION: ${JWT_EXPIRATION:-86400000}
     ports:
       - "${BACKEND_PORT:-8081}:8081"
     volumes:
@@ -78,10 +80,85 @@ services:
     networks:
       - sourceme-network
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: sourceme-prometheus
+    restart: unless-stopped
+    ports:
+      - "${PROMETHEUS_PORT:-9090}:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-lifecycle'
+    depends_on:
+      - backend
+    networks:
+      - sourceme-network
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: sourceme-grafana
+    restart: unless-stopped
+    ports:
+      - "${GRAFANA_PORT:-3001}:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: ${GRAFANA_ADMIN_USER:-admin}
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_ADMIN_PASSWORD:-admin}
+      GF_USERS_ALLOW_SIGN_UP: "false"
+      GF_SERVER_ROOT_URL: "%(protocol)s://%(domain)s/grafana/"
+      GF_SERVER_SERVE_FROM_SUB_PATH: "true"
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning:ro
+    depends_on:
+      - prometheus
+    networks:
+      - sourceme-network
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: sourceme-node-exporter
+    restart: unless-stopped
+    ports:
+      - "${NODE_EXPORTER_PORT:-9100}:9100"
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    networks:
+      - sourceme-network
+
+  postgres-exporter:
+    image: prometheuscommunity/postgres-exporter:latest
+    container_name: sourceme-postgres-exporter
+    restart: unless-stopped
+    ports:
+      - "${POSTGRES_EXPORTER_PORT:-9187}:9187"
+    environment:
+      DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER:-sourceme_user}:${POSTGRES_PASSWORD:-sourceme_password}@postgres:5432/${POSTGRES_DB:-sourceme}?sslmode=disable"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - sourceme-network
+
 volumes:
   postgres_data:
     driver: local
   uploads:
+    driver: local
+  prometheus_data:
+    driver: local
+  grafana_data:
     driver: local
 
 networks:
