--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,11 +28,14 @@ spring:
   flyway:
     enabled: true
     baseline-on-migrate: true
+    baseline-version: 1
     locations: classpath:db/migration
     sql-migration-prefix: V
     sql-migration-separator: __
     sql-migration-suffixes: .sql
     validate-on-migrate: false
+    out-of-order: true
+    ignore-missing-migrations: true
 
 server:
   port: 8081
