feat: Grafana Slack 알림 시스템 추가
- Slack Webhook 연동 설정
- 6가지 주요 알림 규칙 생성:
  1. 애플리케이션 다운 (1분 이상)
  2. API 응답 시간 > 2초 (5분 이상)
  3. JVM Heap 메모리 > 85% (3분 이상)
  4. DB 커넥션 풀 > 80% (3분 이상)
  5. CPU 사용률 > 90% (5분 이상)
  6. HTTP 5xx 에러 발생 (2분 이상)
- Contact Point 및 Notification Policy 설정
- docker-compose.yml에 SLACK_WEBHOOK_URL 환경 변수 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,7 @@ services:
       GF_USERS_ALLOW_SIGN_UP: "false"
       GF_SERVER_ROOT_URL: "%(protocol)s://%(domain)s/grafana/"
       GF_SERVER_SERVE_FROM_SUB_PATH: "true"
+      SLACK_WEBHOOK_URL: ${SLACK_WEBHOOK_URL}
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning:ro
